<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Update Android</string>
    <string name="title_section1">Change</string>
    <string name="title_section2">Profile</string>
    <string name="title_section3">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_share">Share</string>
    <string name="action_rate_us">Rate Us</string>
    <string name="action_about_us">About Us</string>
    <string name="action_logout">Logout</string>
    <string name="action_revoke_access">Revoke Access</string>
    <string name="action_add_profile">Add Profile</string>
    <string name="action_settings">Settings</string>
    <string name="action_reboot">Reboot</string>
    <string name="user_name">UserName</string>
    <string name="profile_pic_description">User\'s Google Plus Profile Picture</string>
    <string name="user_email">Email ID</string>

</resources>
