<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.apprevelations.codescanner.MainActivity" >

    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        android:icon="@drawable/ic_action_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_rate_us"
        android:orderInCategory="1"
        android:title="@string/action_rate_us"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_about_us"
        android:orderInCategory="2"
        android:title="@string/action_about_us"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="3"
        android:title="@string/action_logout"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_revoke_access"
        android:orderInCategory="4"
        android:title="@string/action_revoke_access"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>
