<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#F7F7F7"
            android:padding="5dp" >
            
            <RelativeLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                
                <LinearLayout 
                    android:id="@+id/opaque"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

        			<ImageView
	            		android:id="@+id/profile_pic"
            			android:layout_width="wrap_content"
            			android:layout_height="wrap_content"
            			android:contentDescription="@string/profile_pic_description"
            			android:src="@drawable/ic_launcher" />

       				<TextView
	           			android:id="@+id/user_name"
           				android:layout_width="wrap_content"
           				android:layout_height="wrap_content"
           				android:text="@string/user_name"
           				android:textAppearance="?android:attr/textAppearanceMedium" />

       				<TextView
       		    		android:id="@+id/email_id"
       		    		android:layout_width="wrap_content"
       		    		android:layout_height="wrap_content"
       		    		android:text="@string/user_email"
       		    		android:textColor="@color/Black"
       		    		android:textAppearance="?android:attr/textAppearanceSmall" />
       				
       			</LinearLayout>
       			
                <LinearLayout 
                    android:id="@+id/transparent_layout"
                    android:alpha="0"
                    android:orientation="vertical"
                    android:layout_alignTop="@id/opaque"
                    android:layout_alignBottom="@id/opaque"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                    
                </LinearLayout>
       			
       		</RelativeLayout>

       	</LinearLayout>
 
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:background="@color/White" >

            <TextView
                android:id="@+id/navigation_drawer_item_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/title_section1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:background="@drawable/navigation_drawer_items_selector" />
            
            <TextView
                android:id="@+id/navigation_drawer_item_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/title_section2"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:background="@drawable/navigation_drawer_items_selector" />
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/navigation_drawer_item_group_seperator"
                android:orientation="vertical" />
            
            <TextView
                android:id="@+id/navigation_drawer_item_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/title_section3"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:background="@drawable/navigation_drawer_items_selector" />
            
        </LinearLayout>
            
    </LinearLayout>

</ScrollView>